<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.co.ryanmoss.virtuallectureaid.LoginActivity">

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="Username"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="Password"
        android:layout_below="@+id/txt_username"
        android:layout_centerHorizontal="true"
        />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:id="@+id/rdb_remember_me"
        android:layout_below="@+id/txt_password"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/login"
        android:layout_below="@+id/rdb_remember_me"/>

    <TextView
        android:id="@+id/lbl_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/register_account"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_login"/>

    <TextView
        android:id="@+id/lbl_forgot_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lbl_register"/>




</RelativeLayout>
