<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ground_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uk.co.ryanmoss.footballgroundguide_android.GroundProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/AppBar">
        <android.support.v7.widget.Toolbar
            android:id="@+id/footballGroundAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="FOOTBALL GROUND PROFILE" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/AppBar"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/FootballRelativeImage"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:adjustViewBounds="true" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:padding="15dp"
                    android:layout_below="@id/FootballRelativeImage"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtTeamName"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentStart="true"
                            android:gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <TextView
                            android:text="@string/label_stadium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lblStadium"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentStart="true"
                            android:gravity="center"/>

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtTeamStadiumName"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_below="@+id/txtTeamName"
                            android:layout_alignParentStart="true"
                            android:gravity="center"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <TextView
                            android:text="@string/label_founded"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lblTeamFounded"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:gravity="center"/>
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtTeamFounded"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <TextView
                        android:text="@string/label_travel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtTravel"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:gravity="left"
                        />

                    <TextView
                        android:text="@string/label_trains"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtTrains"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:gravity="left"
                        android:paddingLeft="5dp"/>

                    <TextView
                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtTrainInfo"
                        android:gravity="left"
                        android:paddingLeft="10dp"/>

                    <TextView
                        android:text="@string/label_cars"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtCars"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:gravity="left"
                        android:paddingLeft="5dp"/>

                    <TextView
                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtCarInfo"
                        android:gravity="left"
                        android:paddingLeft="10dp"/>

                    <TextView
                        android:text="@string/label_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtReview"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:gravity="left"
                        android:paddingTop="10dp"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


</LinearLayout>
